# aoc

./: .gitignore  Cargo.toml  README.md  out.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  test.yml
aoc/: Cargo.toml
aoc-2024/: Cargo.toml
aoc-2024/data/: day14.txt  day18.txt
aoc-2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
aoc-2025/: Cargo.toml  README.md  visualization.html
aoc-2025/data/: day08.txt
aoc-2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
aoc-common/: Cargo.toml
aoc-common/src/: aoc_client.rs  lib.rs  runner.rs  types.rs
aoc/src/: main.rs
scripts/: check.sh
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  utils.rs
