[workspace]
members = [
    "aoc-common",
    "aoc",
    "aoc-2024",
]
resolver = "2"

# Shared dependencies across workspace
[workspace.dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
regex = "1.11.1"
ordered-float = "4.5.0"
rustworkx-core = "0.15.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Shared metadata
[workspace.package]
edition = "2021"
version = "0.1.0"
