[workspace]
members = [
    "aoc-common",
    "aoc",
    "aoc-2024", 
    "aoc-2025",
]
resolver = "2"

# Shared dependencies across workspace
[workspace.dependencies]
reqwest = { version = "0.12.26", features = ["blocking"] }
regex = "1.12.2"
ordered-float = "5.1.0"
rustworkx-core = "0.17.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Shared metadata
[workspace.package]
edition = "2021"
version = "0.1.0"
